--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -58,7 +58,7 @@
     "#Ordner wird erstellt\n",
     "os.makedirs('dataGPGAN')\n",
     "#Dateien werden entpackt nach Ordner\n",
-    "with ZipFile('anime-faces.zip', 'r') as f:\n",
+    "with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
     "  f.extractall('GPGAN')"
    ]
   },
