--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -54,7 +54,7 @@
     "#Ordner wird erstellt\n",
     "os.makedirs('dataWGAN')\n",
     "#Dateien werden entpackt nach Ordner\n",
-    "with ZipFile('anime-faces.zip', 'r') as f:\n",
+    "with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
     "  f.extractall('dataWGAN')"
    ]
   },
