--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -45,7 +45,10 @@
     "from torchvision.utils import save_image\n",
     "from torch import autograd\n",
     "from torch.autograd import Variable\n",
-    "from torch.autograd import grad as torch_grad"
+    "from torch.autograd import grad as torch_grad\n",
+    "import kaggle\n",
+    "import requests\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi"
    ]
   },
   {
