--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,10 @@
     "from torch import nn, optim\n",
     "from torch.autograd.variable import Variable\n",
     "from torchvision import transforms, datasets\n",
-    "from torchvision.utils import save_image"
+    "from torchvision.utils import save_image\n",
+    "import kaggle\n",
+    "import requests\n",
+    "from kaggle.api.kaggle_api_extended import KaggleApi"
    ]
   },
   {
@@ -352,8 +355,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.10 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
