--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -58,11 +58,13 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
+    "#Wenn Ordner nicht existiert\n",
+    "if(os.path.exists('dataGPGAN') == False):\n",
     "#Ordner wird erstellt\n",
-    "os.makedirs('dataGPGAN')\n",
+    "  os.makedirs('dataGPGAN')\n",
     "#Dateien werden entpackt nach Ordner\n",
-    "with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
-    "  f.extractall('GPGAN')"
+    "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
+    "    f.extractall('dataGPGAN')"
    ]
   },
   {
@@ -261,8 +263,10 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
-    "#Ordner wird erstellt\n",
-    "os.makedirs('savesGPGAN')\n",
+    "#Ordner wird erstellt, wenn nicht existent\n",
+    "if(os.path.exists('savesGPGAN') == False):\n",
+    "    os.makedirs('savesGPGAN')\n",
+    "\n",
     "\n",
     "#Arrays für Bilder, Generator & Diskriminator - Losses\n",
     "img_list = []\n",
