--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -54,11 +54,13 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
+    "#Wenn Ordner nicht existiert\n",
+    "if(os.path.exists('dataWGAN') == False):\n",
     "#Ordner wird erstellt\n",
-    "os.makedirs('dataWGAN')\n",
+    "  os.makedirs('dataWGAN')\n",
     "#Dateien werden entpackt nach Ordner\n",
-    "with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
-    "  f.extractall('dataWGAN')"
+    "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
+    "    f.extractall('dataWGAN')"
    ]
   },
   {
@@ -257,8 +259,9 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
-    "#Ordner wird erstellt\n",
-    "os.makedirs('savesWGAN')\n",
+    "#Ordner wird erstellt, wenn nicht existent\n",
+    "if(os.path.exists('savesWGAN') == False):\n",
+    "    os.makedirs('savesWGAN')\n",
     "\n",
     "#Arrays für Bilder, Generator & Diskriminator - Losses\n",
     "img_list = []\n",
