--- a/DCGAN.ipynb
+++ b/DCGAN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,19 +48,22 @@
     "from torch.autograd import grad as torch_grad\n",
     "import kaggle\n",
     "import requests\n",
-    "from kaggle.api.kaggle_api_extended import KaggleApi"
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "import shutil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
-    "#Wenn Ordner nicht existiert\n",
+    "#Wenn Ordner wird gelöscht, wenn dieser existiert\n",
+    "if(os.path.exists('dataDCGAN') == True):\n",
+    "  shutil.rmtree('dataDCGAN')\n",
+    "#Ordner wird erstellt, wenn dieser nicht existiert\n",
     "if(os.path.exists('dataDCGAN') == False):\n",
-    "#Ordner wird erstellt\n",
     "  os.makedirs('dataDCGAN')\n",
     "#Dateien werden entpackt nach Ordner\n",
     "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
@@ -261,6 +264,9 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
+    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "if(os.path.exists('dataDCGAN') == True):\n",
+    "  shutil.rmtree('savesDCGAN')\n",
     "#Ordner wird erstellt\n",
     "if(os.path.exists('savesDCGAN') == False):\n",
     "    os.makedirs('savesDCGAN')\n",
