--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -58,6 +58,9 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
+    "#Wenn wird gelöscht, wenn dieser existiert\n",
+    "if(os.path.exists('dataGPGAN') == True):\n",
+    "  shutil.rmtree('dataGPGAN')\n",
     "#Wenn Ordner nicht existiert\n",
     "if(os.path.exists('dataGPGAN') == False):\n",
     "#Ordner wird erstellt\n",
@@ -263,10 +266,12 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
+    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "if(os.path.exists('dataGPGAN') == True):\n",
+    "  shutil.rmtree('dataGPGAN')\n",
     "#Ordner wird erstellt, wenn nicht existent\n",
     "if(os.path.exists('savesGPGAN') == False):\n",
     "    os.makedirs('savesGPGAN')\n",
-    "\n",
     "\n",
     "#Arrays für Bilder, Generator & Diskriminator - Losses\n",
     "img_list = []\n",
