--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -54,9 +54,11 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
-    "#Wenn Ordner nicht existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "if(os.path.exists('dataWGAN') == True):\n",
+    "  shutil.rmtree('dataWGAN')\n",
+    "#Wenn Ordner nicht existiert, wird dieser erstellt\n",
     "if(os.path.exists('dataWGAN') == False):\n",
-    "#Ordner wird erstellt\n",
     "  os.makedirs('dataWGAN')\n",
     "#Dateien werden entpackt nach Ordner\n",
     "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
@@ -259,6 +261,9 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
+    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "if(os.path.exists('dataWGAN') == True):\n",
+    "  shutil.rmtree('dataWGAN')\n",
     "#Ordner wird erstellt, wenn nicht existent\n",
     "if(os.path.exists('savesWGAN') == False):\n",
     "    os.makedirs('savesWGAN')\n",
