--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -48,7 +48,8 @@
     "from torch.autograd import grad as torch_grad\n",
     "import kaggle\n",
     "import requests\n",
-    "from kaggle.api.kaggle_api_extended import KaggleApi"
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "import shutil"
    ]
   },
   {
