--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -19,6 +19,7 @@
     "import torch\n",
     "import os\n",
     "import torchvision\n",
+    "import gc\n",
     "import torchvision.datasets as dset\n",
     "import torchvision\n",
     "import torchvision.datasets as datasets\n",
@@ -42,9 +43,13 @@
     "from torch.autograd.variable import Variable\n",
     "from torchvision import transforms, datasets\n",
     "from torchvision.utils import save_image\n",
+    "from torch import autograd\n",
+    "from torch.autograd import Variable\n",
+    "from torch.autograd import grad as torch_grad\n",
     "import kaggle\n",
     "import requests\n",
-    "from kaggle.api.kaggle_api_extended import KaggleApi"
+    "from kaggle.api.kaggle_api_extended import KaggleApi\n",
+    "import shutil"
    ]
   },
   {
