--- a/DCGAN.ipynb
+++ b/DCGAN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
    "source": [
     "#Trainingsschleife\n",
     "#Ordner wird gelöscht, wenn dieser existiert\n",
-    "if(os.path.exists('dataDCGAN') == True):\n",
+    "if(os.path.exists('savesDCGAN') == True):\n",
     "  shutil.rmtree('savesDCGAN')\n",
     "#Ordner wird erstellt\n",
     "if(os.path.exists('savesDCGAN') == False):\n",
@@ -314,6 +314,7 @@
     "        ##Generator wird trainiert\n",
     "        gene_optimizer.zero_grad()\n",
     "\n",
+    "        #Latente Batch-vectoren definieren um den Generator-Fortschritt  festzustellen\n",
     "        local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
     "\n",
     "        output = disc(gene(local_noise))\n",
