--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,8 +267,8 @@
    "source": [
     "#Trainingsschleife\n",
     "#Ordner wird gelöscht, wenn dieser existiert\n",
-    "if(os.path.exists('dataWGAN') == True):\n",
-    "  shutil.rmtree('dataWGAN')\n",
+    "if(os.path.exists('savesWGAN') == True):\n",
+    "  shutil.rmtree('savesWGAN')\n",
     "#Ordner wird erstellt, wenn nicht existent\n",
     "if(os.path.exists('savesWGAN') == False):\n",
     "    os.makedirs('savesWGAN')\n",
