--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "#DataLoader\n",
     "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden via Kaggle herunter geladen)\n",
-    "data_path = \"GPGAN\"\n",
+    "data_path = \"dataGPGAN\"\n",
     "\n",
     "#Datenset erstellt\n",
     "dataset = dset.ImageFolder(root=data_path,\n",
@@ -268,8 +268,8 @@
    "source": [
     "#Trainingsschleife\n",
     "#Ordner wird gelöscht, wenn dieser existiert\n",
-    "if(os.path.exists('dataGPGAN') == True):\n",
-    "  shutil.rmtree('dataGPGAN')\n",
+    "if(os.path.exists('savesGPGAN') == True):\n",
+    "  shutil.rmtree('savesGPGAN')\n",
     "#Ordner wird erstellt, wenn nicht existent\n",
     "if(os.path.exists('savesGPGAN') == False):\n",
     "    os.makedirs('savesGPGAN')\n",
@@ -374,8 +374,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.10 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
