--- a/DCGAN.ipynb
+++ b/DCGAN.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Installieren aller requirements der requirements.txt\n",
     "pip install -r requirements.txt"
    ]
   },
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imports\n",
+    "#Imports aller für die GANS notwendigen Bibliotheken\n",
     "import torch\n",
     "import os\n",
     "import torchvision\n",
@@ -37,8 +38,6 @@
     "import numpy as np\n",
     "from torch import optim\n",
     "from torch.autograd import Variable\n",
-    "from IPython.display import HTML\n",
-    "from zipfile import ZipFile\n",
     "from torch import nn, optim\n",
     "from torch.autograd.variable import Variable\n",
     "from torchvision import transforms, datasets\n",
@@ -59,13 +58,13 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
-    "#Wenn Ordner wird gelöscht, wenn dieser existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert (für erneute Durchläufe)\n",
     "if(os.path.exists('dataDCGAN') == True):\n",
     "  shutil.rmtree('dataDCGAN')\n",
     "#Ordner wird erstellt, wenn dieser nicht existiert\n",
     "if(os.path.exists('dataDCGAN') == False):\n",
     "  os.makedirs('dataDCGAN')\n",
-    "#Dateien werden entpackt nach Ordner\n",
+    "#Dateien werden in den erstellten Ordner entpackt\n",
     "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
     "    f.extractall('dataDCGAN')"
    ]
@@ -107,7 +106,7 @@
    "outputs": [],
    "source": [
     "#DataLoader\n",
-    "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden via Kaggle herunter geladen)\n",
+    "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden zuvor herunter geladen)\n",
     "data_path = \"dataDCGAN\"\n",
     "\n",
     "#Datenset erstellt\n",
@@ -129,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Randomisierte Initialisierung der Gewichte\n",
+    "#Randomisierte Initialisierung der Gewichte (Standardmethodik)\n",
     "def weights_init(m):\n",
     "    classname = m.__class__.__name__\n",
     "    if classname.find('Conv') != -1:\n",
@@ -264,7 +263,7 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
-    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert (führ erneute Durchläufe)\n",
     "if(os.path.exists('savesDCGAN') == True):\n",
     "  shutil.rmtree('savesDCGAN')\n",
     "#Ordner wird erstellt\n",
@@ -276,73 +275,93 @@
     "gene_losses = []\n",
     "disc_losses = []\n",
     "iters = 0\n",
-    "safe = 0\n",
     "\n",
     "#Schleife für Wiederholung nach Anzahl der Epochen\n",
     "for epoch in range(epoch_nr):\n",
+    "\n",
     "    #Schleife für jede Batch des Dataloaders\n",
     "    for i, (real_data,_) in enumerate(dataloader):\n",
+    "\n",
+    "        #data erhält die Dimensionen von real_data\n",
     "        data = real_data.shape[0]\n",
     "\n",
+    "        #Alle optimierten Gradienten werden auf null gesetzt\n",
     "        disc_optimizer.zero_grad()\n",
     "\n",
     "        #Stapel latenter Vektoren wird generiert\n",
     "        local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
+    "\n",
     "        #Batch des Dataloaders wird formatiert und auf das Gerät verwiesen\n",
     "        r_img = real_data.to(dv)\n",
+    "\n",
     "        #Stapel von Fakes wird generiert\n",
     "        f_img = gene(local_noise)\n",
     "\n",
-    "        ##Diskriminator wird trainiert\n",
+    "        #Diskriminator wird trainiert\n",
+    "\n",
     "        #Diskriminator wird auf die realen Bilder angewand und dem output wird dieselbe Form gebracht\n",
     "        output_r = disc(r_img)\n",
+    "\n",
     "        #Diskriminator wird auf die Fakes angewand und dem output wird dieselbe Form gebracht\n",
     "        output_f = disc(f_img)\n",
     "\n",
     "        #Loss des Diskriminators auf die realen Bilder wird berechnet \n",
     "        loss_disc_real = loss_function(output_r, torch.ones_like(output_r))\n",
+    "\n",
     "        #Loss des Diskriminators auf die Fakes wird berechnet\n",
     "        loss_disc_fake = loss_function(output_f, torch.zeros_like(output_f))\n",
+    "\n",
     "        #Loss des Diskriminators wird berechnet\n",
     "        loss_disc = (loss_disc_real + loss_disc_fake) / 2\n",
-    "        #Gradienten des Diskriminators werden auf null gesetzt (keine Gradientenakkumulation)\n",
+    "\n",
     "        #Gradient es Diskriminatorloss wird berechnet\n",
     "        loss_disc.backward()\n",
+    "\n",
     "        #Diskriminator wird geupdatet\n",
     "        disc_optimizer.step()\n",
     "\n",
-    "        ##Generator wird trainiert\n",
+    "        #Generator wird trainiert\n",
+    "\n",
+    "        #Alle optimierten Gradienten werden auf null gesetzt\n",
     "        gene_optimizer.zero_grad()\n",
     "\n",
     "        #Latente Batch-vectoren definieren um den Generator-Fortschritt  festzustellen\n",
     "        local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
     "\n",
+    "        #Output wird durch den Diskriminator über den Generator auf die festen Batch-Vectoren berechnet\n",
     "        output = disc(gene(local_noise))\n",
+    "\n",
     "        #Loss des Generators wird berechnet basierend auf dem Output\n",
     "        loss_gene = loss_function(output, torch.ones_like(output))\n",
+    "\n",
     "        #Gradient des Generatorloss wird berechnet\n",
     "        loss_gene.backward()\n",
+    "\n",
     "        #Generator wird geupdatet\n",
     "        gene_optimizer.step()\n",
     "\n",
     "        #Loss Generator wird ans Ende der Liste angehangen \n",
     "        gene_losses.append(loss_gene)\n",
+    "\n",
     "        #Loss Discriminator wird ans Ende der Liste angehangen \n",
     "        disc_losses.append(loss_disc)\n",
     "\n",
-    "        #Hälfte der Btachgröße / volle Batchgröße\n",
+    "        #Ausgabe bei voll durchlaufener Batchgröße\n",
     "        if i % (len(dataloader)) == 0:\n",
     "            print('[%.3i/%.3i] Größe: %.3i Wiederholung: %.i Loss_D: %.4f Loss_G: %.4f' % (epoch, epoch_nr, len(dataloader), iters, loss_disc, loss_gene))\n",
     "\n",
     "            with torch.no_grad():\n",
-    "            #Fakes werden an den Generator-Output gehängt\n",
+    "\n",
+    "                #Fakes werden an den Generator-Output gehängt\n",
     "                fake = gene(fixed_noise)\n",
+    "\n",
     "            #Tensor wird auf Bilddatei gespeichert\n",
     "            img_list.append(vutils.make_grid(fake, padding=2, normalize=True))\n",
     "\n",
     "            #Bilder werden abgespeichert\n",
     "            save_image(img_list[epoch], \"savesDCGAN/Ep%.3i.png\" % (epoch), nrow=1, normalize=True)\n",
     "\n",
+    "        #iters wird um 1 erhöht\n",
     "        iters += 1"
    ]
   },
@@ -352,7 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Direkter Vergleich\n",
+    "#Direkter Vergleich zwischen echten Bildern und erstellten Bildern\n",
     "real_batch = next(iter(dataloader))\n",
     "plt.figure(figsize=(20,20))\n",
     "plt.subplot(1,2,1)\n",
