--- a/GPGAN.ipynb
+++ b/GPGAN.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Installieren aller requirements der requirements.txt\n",
     "pip install -r requirements.txt"
    ]
   },
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imports\n",
+    "#Imports aller für die GANS notwendigen Bibliotheken\n",
     "import torch\n",
     "import os\n",
     "import torchvision\n",
@@ -37,8 +38,6 @@
     "import numpy as np\n",
     "from torch import optim\n",
     "from torch.autograd import Variable\n",
-    "from IPython.display import HTML\n",
-    "from zipfile import ZipFile\n",
     "from torch import nn, optim\n",
     "from torch.autograd.variable import Variable\n",
     "from torchvision import transforms, datasets\n",
@@ -59,14 +58,13 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
-    "#Wenn wird gelöscht, wenn dieser existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert (für erneute Durchläufe)\n",
     "if(os.path.exists('dataGPGAN') == True):\n",
     "  shutil.rmtree('dataGPGAN')\n",
-    "#Wenn Ordner nicht existiert\n",
+    "#Ordner wird erstellt, wenn dieser nicht existiert\n",
     "if(os.path.exists('dataGPGAN') == False):\n",
-    "#Ordner wird erstellt\n",
     "  os.makedirs('dataGPGAN')\n",
-    "#Dateien werden entpackt nach Ordner\n",
+    "#Dateien werden in den erstellten Ordner entpackt\n",
     "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
     "    f.extractall('dataGPGAN')"
    ]
@@ -90,9 +88,10 @@
     "#GPUs die zur verwendung stehen (Optional)\n",
     "ngpu = 1\n",
     "\n",
-    "#WGAN Master\n",
-    "#Kritische Wiederholungen\n",
-    "critic_iterations = 5\n",
+    "#GPGAN Master\n",
+    "\n",
+    "#Zusätzliche Discriminator - Wiederholungen\n",
+    "disc_iterations = 5\n",
     "\n",
     "#Lambda\n",
     "lmbd = 10"
@@ -115,7 +114,7 @@
    "outputs": [],
    "source": [
     "#DataLoader\n",
-    "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden via Kaggle herunter geladen)\n",
+    "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden zuvor herunter geladen)\n",
     "data_path = \"dataGPGAN\"\n",
     "\n",
     "#Datenset erstellt\n",
@@ -137,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Randomisierte Initialisierung der Gewichte\n",
+    "#Randomisierte Initialisierung der Gewichte (Standardmethodik)\n",
     "def weights_init(m):\n",
     "    classname = m.__class__.__name__\n",
     "    if classname.find('Conv') != -1:\n",
@@ -224,6 +223,7 @@
     "            nn.BatchNorm2d(512),\n",
     "            nn.LeakyReLU(0.2, inplace=True),\n",
     "            nn.Conv2d(512, 1, 4, 1, 0, bias=False),\n",
+    "            #Keine abschließende Aktivierungsfunktion benötigt\n",
     "        )\n",
     "\n",
     "    def forward(self, input):\n",
@@ -267,10 +267,10 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
-    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert (führ erneute Durchläufe)\n",
     "if(os.path.exists('savesGPGAN') == True):\n",
     "  shutil.rmtree('savesGPGAN')\n",
-    "#Ordner wird erstellt, wenn nicht existent\n",
+    "#Ordner wird erstellt\n",
     "if(os.path.exists('savesGPGAN') == False):\n",
     "    os.makedirs('savesGPGAN')\n",
     "\n",
@@ -279,75 +279,102 @@
     "gene_losses = []\n",
     "disc_losses = []\n",
     "iters = 0\n",
-    "safe = 0\n",
     "\n",
     "#Schleife für Wiederholung nach Anzahl der Epochen\n",
     "for epoch in range(epoch_nr):\n",
     "    #Schleife für jede Batch des Dataloaders\n",
     "    for i, (real_data,_) in enumerate(dataloader):\n",
     "\n",
+    "        #Ausgabe bei voll durchlaufener Batchgröße\n",
     "        data = real_data.float().shape[0]\n",
     "\n",
-    "        for _ in range(critic_iterations):\n",
-    "\n",
+    "        #Diskriminator wird trainiert\n",
+    "        for _ in range(disc_iterations):\n",
+    "            \n",
+    "            #Alle optimierten Gradienten werden auf null gesetzt\n",
     "            disc_optimizer.zero_grad()\n",
     "\n",
+    "            #Stapel latenter Vektoren wird generiert\n",
     "            local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
     "\n",
+    "            #Batch des Dataloaders wird formatiert und auf das Gerät verwiesen\n",
     "            r_img = real_data.to(dv)\n",
     "\n",
+    "            #Stapel von Fakes wird generiert\n",
     "            f_img = gene(local_noise)\n",
     "\n",
+    "            #Diskriminator wird auf die realen Bilder angewand und dem output wird dieselbe Form gebracht\n",
     "            output_r = disc(r_img)\n",
     "\n",
+    "            #Diskriminator wird auf die Fakes angewand und dem output wird dieselbe Form gebracht\n",
     "            output_f = disc(f_img)\n",
     "\n",
+    "            #Epsilon wird festgehalten\n",
     "            epsilon = torch.rand(r_img.shape[0], 1, 1, 1).to(dv)\n",
     "\n",
+    "            #Interpolation wird berechnet\n",
     "            interpolated = epsilon * r_img + (1 - epsilon) * f_img\n",
     "\n",
+    "            #Ausgabe des Discriminators auf die Interpolation\n",
     "            output_d = disc(interpolated)\n",
-    "\n",
+    "            \n",
+    "            #Gradienten werden anhand der Werte berechnet\n",
     "            grad = torch.autograd.grad(outputs = output_d, inputs = interpolated, grad_outputs = torch.ones(output_d.size(), device = dv), create_graph = True, retain_graph = True, only_inputs = True, allow_unused = True)[0]\n",
-    "\n",
+    "            \n",
+    "            #Gradient penalty wird berechnet\n",
     "            gp = ((grad.norm(2, dim = 1) - 1) ** 2).mean()\n",
     "\n",
+    "            #Loss des Diskriminators wird  berechnet\n",
     "            loss_disc = (output_f-output_r).mean() + gp.mean() * lmbd\n",
     "\n",
+    "            #Gradient es Diskriminatorloss wird berechnet\n",
     "            loss_disc.backward()\n",
     "\n",
+    "            #Diskriminator wird geupdatet\n",
     "            disc_optimizer.step()   \n",
     "\n",
+    "        #Generator wird trainiert\n",
+    "\n",
+    "        #Alle optimierten Gradienten werden auf null gesetzt\n",
     "        gene_optimizer.zero_grad()\n",
     "\n",
+    "        #Stapel latenter Vektoren wird generiert\n",
     "        local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
     "\n",
+    "        #Ausgabe wird anhand der latenten Vektoren berechnet\n",
     "        output = -disc(gene(local_noise))\n",
     "\n",
+    "        #Loss des Generators wird anhand des Outputs berechnet\n",
     "        loss_gene = output.mean()  \n",
     "\n",
+    "        #Gradient es Generatorloss wird berechnet\n",
     "        loss_gene.backward()\n",
     "        \n",
+    "        #Generator wird geupdatet\n",
     "        gene_optimizer.step()\n",
     "\n",
     "        #Loss Generator wird ans Ende der Liste angehangen \n",
     "        gene_losses.append(loss_gene)\n",
+    "\n",
     "        #Loss Discriminator wird ans Ende der Liste angehangen \n",
     "        disc_losses.append(loss_disc)\n",
     "\n",
-    "        #Hälfte der Btachgröße / volle Batchgröße\n",
+    "        #Ausgabe bei voll durchlaufener Batchgröße\n",
     "        if i % (len(dataloader)) == 0:\n",
     "            print('[%.3i/%.3i] Größe: %.3i Wiederholung: %.i Loss_D: %.4f Loss_G: %.4f' % (epoch, epoch_nr, len(dataloader), iters, loss_disc, loss_gene))\n",
     "\n",
     "            with torch.no_grad():\n",
-    "            #Fakes werden an den Generator-Output gehängt\n",
+    "\n",
+    "                #Fakes werden an den Generator-Output gehängt\n",
     "                fake = gene(fixed_noise)\n",
+    "\n",
     "            #Tensor wird auf Bilddatei gespeichert\n",
     "            img_list.append(vutils.make_grid(fake, padding=2, normalize=True))\n",
     "\n",
     "            #Bilder werden abgespeichert\n",
     "            save_image(img_list[epoch], \"savesGPGAN/Ep%.3i.png\" % (epoch), nrow=1, normalize=True)\n",
     "\n",
+    "        #iters wird um 1 erhöht\n",
     "        iters += 1"
    ]
   },
