--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Installieren aller requirements der requirements.txt\n",
     "pip install -r requirements.txt"
    ]
   },
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imports\n",
+    "#Imports aller für die GANS notwendigen Bibliotheken\n",
     "import torch\n",
     "import os\n",
     "import torchvision\n",
@@ -37,8 +38,6 @@
     "import numpy as np\n",
     "from torch import optim\n",
     "from torch.autograd import Variable\n",
-    "from IPython.display import HTML\n",
-    "from zipfile import ZipFile\n",
     "from torch import nn, optim\n",
     "from torch.autograd.variable import Variable\n",
     "from torchvision import transforms, datasets\n",
@@ -59,13 +58,13 @@
    "outputs": [],
    "source": [
     "#In Ordner ablegen\n",
-    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert (für erneute Durchläufe)\n",
     "if(os.path.exists('dataWGAN') == True):\n",
     "  shutil.rmtree('dataWGAN')\n",
-    "#Wenn Ordner nicht existiert, wird dieser erstellt\n",
+    "#Ordner wird erstellt, wenn dieser nicht existiert\n",
     "if(os.path.exists('dataWGAN') == False):\n",
     "  os.makedirs('dataWGAN')\n",
-    "#Dateien werden entpackt nach Ordner\n",
+    "#Dateien werden in den erstellten Ordner entpackt\n",
     "  with ZipFile('animefaces/anime-faces.zip', 'r') as f:\n",
     "    f.extractall('dataWGAN')"
    ]
@@ -90,8 +89,9 @@
     "ngpu = 1\n",
     "\n",
     "#WGAN Master\n",
-    "#Kritische Wiederholungen\n",
-    "critic_iterations = 5\n",
+    "\n",
+    "#Zusätzliche Discriminator - Wiederholungen\n",
+    "disc_iterations = 5\n",
     "\n",
     "#Gewichte festhalten\n",
     "weight_clipping = 0.01"
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "#DataLoader\n",
-    "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden via Kaggle herunter geladen)\n",
+    "#Datenpfad wird angegeben (Ordner wurde zuvor erstellt, Daten wurden zuvor herunter geladen)\n",
     "data_path = \"dataWGAN\"\n",
     "\n",
     "#Datenset erstellt\n",
@@ -136,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Randomisierte Initialisierung der Gewichte\n",
+    "#Randomisierte Initialisierung der Gewichte (Standardmethodik)\n",
     "def weights_init(m):\n",
     "    classname = m.__class__.__name__\n",
     "    if classname.find('Conv') != -1:\n",
@@ -223,6 +223,7 @@
     "            nn.BatchNorm2d(512),\n",
     "            nn.LeakyReLU(0.2, inplace=True),\n",
     "            nn.Conv2d(512, 1, 4, 1, 0, bias=False),\n",
+    "            \n",
     "        )\n",
     "\n",
     "    def forward(self, input):\n",
@@ -266,10 +267,10 @@
    "outputs": [],
    "source": [
     "#Trainingsschleife\n",
-    "#Ordner wird gelöscht, wenn dieser existiert\n",
+    "#Ordner wird gelöscht, wenn dieser existiert (führ erneute Durchläufe)\n",
     "if(os.path.exists('savesWGAN') == True):\n",
     "  shutil.rmtree('savesWGAN')\n",
-    "#Ordner wird erstellt, wenn nicht existent\n",
+    "#Ordner wird erstellt\n",
     "if(os.path.exists('savesWGAN') == False):\n",
     "    os.makedirs('savesWGAN')\n",
     "\n",
@@ -285,55 +286,74 @@
     "    for i, (real_data,_) in enumerate(dataloader):\n",
     "        data = real_data.shape[0]\n",
     "\n",
-    "        #Discriminator - Training \n",
-    "        for _ in range(critic_iterations):\n",
-    "\n",
+    "        #Diskriminator wird trainiert \n",
+    "        for _ in range(disc_iterations):\n",
+    "            \n",
+    "            #Alle optimierten Gradienten werden auf null gesetzt\n",
     "            disc_optimizer.zero_grad()\n",
     "\n",
+    "            #Stapel latenter Vektoren wird generiert\n",
     "            local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
     "\n",
+    "            #Batch des Dataloaders wird formatiert und auf das Gerät verwiesen\n",
     "            r_img = real_data.to(dv)\n",
     "\n",
+    "            #Stapel von Fakes wird generiert\n",
     "            f_img = gene(local_noise)\n",
     "\n",
+    "            #Diskriminator wird auf die realen Bilder angewand und dem output wird dieselbe Form gebracht\n",
     "            output_r = disc(r_img)\n",
     "\n",
+    "            #Diskriminator wird auf die Fakes angewand und dem output wird dieselbe Form gebracht\n",
     "            output_f = disc(f_img)\n",
     "\n",
+    "            #Loss des Diskriminators wird anhand des Outputs berechnet\n",
     "            loss_disc = (output_f-output_r).mean()\n",
     "\n",
+    "            #Gradient es Diskriminatorloss wird berechnet\n",
     "            loss_disc.backward()\n",
     "\n",
+    "            #Diskriminator wird geupdatet\n",
     "            disc_optimizer.step()\n",
-    "        \n",
+    "\n",
+    "            #Standardfunktion zum updaten der Parameter des Dikriminators\n",
     "            for p in disc.parameters():\n",
     "                p.data.clamp_(-weight_clipping, weight_clipping)\n",
     "\n",
     "\n",
-    "        #Generator - Training\n",
+    "        #Generator wird trainiert\n",
+    "\n",
+    "        #Alle optimierten Gradienten werden auf null gesetzt\n",
     "        gene_optimizer.zero_grad()\n",
     "\n",
+    "        #Stapel latenter Vektoren wird generiert\n",
     "        local_noise = torch.randn(data, 100, 1, 1).to(dv)\n",
     "\n",
+    "        #Ausgabe wird anhand der latenten Vektoren berechnet\n",
     "        output = -disc(gene(local_noise))\n",
     "\n",
+    "        #Loss des Generators wird anhand des Outputs berechnet\n",
     "        loss_gene = output.mean()  \n",
     "\n",
+    "        #Gradient es Generatorloss wird berechnet\n",
     "        loss_gene.backward()\n",
-    "\n",
+    "        \n",
+    "        #Generator wird geupdatet\n",
     "        gene_optimizer.step()\n",
     "\n",
     "        #Loss Generator wird ans Ende der Liste angehangen \n",
     "        gene_losses.append(loss_gene)\n",
+    "\n",
     "        #Loss Discriminator wird ans Ende der Liste angehangen \n",
     "        disc_losses.append(loss_disc)\n",
     "\n",
-    "        #Volle Batchgröße\n",
+    "        #Ausgabe bei voll durchlaufener Batchgröße\n",
     "        if i % (len(dataloader)) == 0:\n",
     "            print('[%.3i/%.3i] Größe: %.3i Wiederholung: %.5i Loss_D: %.4f Loss_G: %.4f' % (epoch, epoch_nr, len(dataloader), iters, loss_disc, loss_gene))\n",
     "\n",
     "            with torch.no_grad():\n",
-    "            #Fakes werden an den Generator-Output gehängt\n",
+    "\n",
+    "                #Fakes werden an den Generator-Output gehängt\n",
     "                fake = gene(fixed_noise)\n",
     "\n",
     "            #Tensor wird auf Bilddatei gespeichert\n",
@@ -342,6 +362,7 @@
     "            #Bilder werden abgespeichert\n",
     "            save_image(img_list[epoch], \"savesWGAN/Ep%.3i.png\" % (epoch), nrow=1, normalize=True)\n",
     "\n",
+    "        #iters wird um 1 erhöht\n",
     "        iters += 1"
    ]
   },
