--- a/WGAN.ipynb
+++ b/WGAN.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Installieren aller requirements der requirements.txt\n",
     "pip install -r requirements.txt"
    ]
   },
@@ -48,7 +47,8 @@
     "import kaggle\n",
     "import requests\n",
     "from kaggle.api.kaggle_api_extended import KaggleApi\n",
-    "import shutil"
+    "import shutil\n",
+    "from zipfile import ZipFile"
    ]
   },
   {
